<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BoyarDroid</string>
    <string name="quick_recipe">Quick Recipe</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_quck_recipe">QuckRecipe</string>
    <string name="title_activity_quick_recipe">QuickRecipe</string>
    <string name="find_recipe">Find Recipes</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_fridge">Fridge</string>
    <string name="fridge_button">Fridge</string>
    <string name="dinner_button">Dinner</string>
    <string name="breakfast_button">Breakfast</string>
    <string name="lunch_button">Lunch</string>
    <string name="user_button">User text</string>
    <string name="addIngredient_button">Add Ingredient</string>
    <string name="removeIngredient_button">Remove Ingredient</string>
    <string name="favoriteRecipe_button">Favorite Recipes</string>
    <string name="title_activity_fruit">Fruit</string>
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="lemon">Lemon</string>
    <string name="lime">Lime</string>
    <string name="blueberry">Blueberry</string>
    <string name="grape">Grape</string>
    <string name="orange">Orange</string>
    <string name="meat">Meat</string>
    <string name="vegetable">Vegetable</string>
    <string name="dairy">Dairy</string>
    <string name="grain">Grain</string>
    <string name="spice">Spice</string>
    

</resources>